# chess-cli

./: Cargo.toml  MAKEFILE  PKGBUILD  README.md  cargo.toml
src/: engine.rs  main.rs  ui.rs
src/chess/: board.rs  mod.rs  moves.rs  pieces.rs  position.rs
