[package]
name = "chess-cli"
version = "0.1.0"
edition = "2021"
authors = ["kernbit"]
description = "CLI Chess Game with Stockfish Integration"

[[bin]]
name = "chess-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.27"
anyhow = "1.0"
regex = "1.0"
